<resources>
    <string name="app_name">HundredEightVows</string>
    <string name="setting">Here you can setup</string>

    <string name="count">Count</string>

    <string name="target">Target</string>
    <string name="repeat_cnt">Repeat Count</string>

    <string name="interval">Interval</string>
    <string name="remain">Remain Seconds</string>
    <string name="count_a">Today: </string>
    <string name="count_b">Overall: </string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="keep_screen_on">Keep Screen On without touch</string>

    <string name="play_sound">Play Sound</string>

    <string name="cbx_tts_number">TTS Count</string>
    <string name="cbx_tts_text">TTS Text</string>

    <string name="file_to_read">File to read</string>
    <string name="korean108" translatable="false">108_Vows_by_Sungsan.json</string>

    <string name="menu_settings">Settings</string>

    <string name="soundpath">bellsounds/</string>

    <string name="title_activity_settings_n">Settings</string>

    <!-- Strings related to Settings -->

    <string-array name="file_choice_values">
        <item>불교방송_나를_깨우는_108배.json</item>
        <item>행복을_찾는_108배_이준원.json</item>
        <item>비종교인_108배.json</item>
        <item>한국_천주교_103위_순교자_성인.json</item>
        <item>사무량심_16.json</item>
        <item>보왕삼매론_10.json</item>
        <item>법구경_p1_106.json</item>
        <item>법구경_p2_105.json</item>
        <item>법구경_p3_106.json</item>
        <item>법구경_p4_103.json</item>
        <item>108_Vows_by_HyunGak.json</item>
        <item>108_Vows_by_Sungsan.json</item>
        <item>108_Lời_Nguyện_Tiếng_Việt.json</item>
        <item>108_verses_Precious_Crystal_Rosary.json</item>
        <item>touching_the_earth_6vows.json</item>
    </string-array>

    <string name="slower">Slower</string>
    <string name="faster">Faster</string>
    <string name="goodjob">Good job. Wish you happiness.</string>
    <string name="selectBellSound">Select bell sound</string>

    <string name="pref_default_bellsound" translatable="false">1.templebell.wav</string>

    <string-array name="bellSoundChoiceValues">
        <item>1.templebell.wav</item>
        <item>2_jovica__little-bell.wav</item>
        <item>3.herbertboland.wav</item>
        <item>4.ottophokus.wav</item>
        <item>5.tec-studios__bell003mono.wav</item>
        <item>6_xicecoffeex__savannah-bell.wav</item>
        <item>7_keykrusher__bicycle-bell.wav</item>
        <item>8_surreal-bell.wav</item>
        <item>9_aiwha__bell.wav</item>
        <item>10_godowan__bell-1.wav</item>
        <item>11__kwahmah_ping.flac</item>
        <item>12_cdrk__reception-bell.flac</item>
        <item>13_bell_bike.ogg</item>
    </string-array>

    <string name="white" translatable="false">white</string>
    <string name="bgcolor">Background Color</string>

    <string name="done_today">Today: </string>
    <string name="overall">Overall: </string>
    <string name="main_page">Continue</string>
    <string name="begin">Begin</string>
    <string name="dialog_pause_title">Paused</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_end">End Session</string>
    <string name="dialog_btn_back_to_start">Back to Start</string>
    <string name="exit" translatable="false">Exit</string>


    <string-array name="colorLabels">
        <item>Rose</item>
        <item>Sky</item>
        <item>Mint</item>
        <item>Lavender</item>
        <item>Cream</item>
        <item>Sand</item>
        <item>White</item>
        <item>Light Grey</item>
        <item>Medium Grey</item>
        <item>Dark Grey</item>
    </string-array>

    <string-array name="colorValues">
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>purple</item>
        <item>cream</item>
        <item>sand</item>
        <item>white</item>
        <item>grey1</item>
        <item>grey2</item>
        <item>grey3</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="ad_unit_id_banner" translatable="false">ca-app-pub-8979756439452342/2007297307</string>

    <string name="about_title">About &amp; Contact</string>
    <string name="about_content">Hundred Eight Vows Application.\n\nThis app helps you perform 108 bows with customizable intervals and sound.\n\nContact Info:\nBilly Wookyoung Hong\nhongwk2001@yahoo.com\n\nPlease contact me for new ideas or if you have new text you would like to add.</string>

    <string name="tts_speed">Speech Speed</string>
    <string name="tts_pitch">Speech Pitch</string>
    <string name="tts_lang">Voice Language</string>
    <string name="tts_voice">Voice Selection</string>
    <string name="tts_play_sample">Play Voice Sample</string>
    <string name="tts_sample_text">This is a sample of the selected voice.</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="pref_not_set">Not set</string>

    <string-array name="tts_lang_entries">
        <item>Korean</item>
        <item>English</item>
        <item>Vietnamese</item>
        <item>All</item>
    </string-array>
    <string-array name="tts_lang_values">
        <item>ko</item>
        <item>en</item>
        <item>vi</item>
        <item>all</item>
    </string-array>
</resources>
