<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tkprof.HundredEightV.IntervalPreference
        android:defaultValue="10.0"
        android:key="interval"
        android:title="@string/interval" />

    <PreferenceCategory />

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="count_a"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/count_a"
        android:layout="@layout/preference_horizontal" />

    <PreferenceCategory />

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="count_b"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/count_b"
        android:layout="@layout/preference_horizontal" />

    <PreferenceCategory />

    <ListPreference
        android:defaultValue="@string/korean108"
        android:entries="@array/file_choice_values"
        android:entryValues="@array/file_choice_values"
        android:key="file_name"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/file_to_read" />

    <PreferenceCategory />

    <ListPreference
        android:defaultValue="@string/pref_default_bellsound"
        android:entries="@array/bellSoundChoiceValues"
        android:entryValues="@array/bellSoundChoiceValues"
        android:key="bellsound"
        android:title="@string/selectBellSound"
        android:layout="@layout/preference_horizontal" />

    <PreferenceCategory />

    <ListPreference
        android:defaultValue="@string/white"
        android:entries="@array/colorValues"
        android:entryValues="@array/colorValues"
        android:key="bgcolor"
        android:title="@string/bgcolor"
        android:layout="@layout/preference_horizontal" />

    <PreferenceCategory />

    <Preference
        android:key="version_info"
        android:layout="@layout/preference_horizontal" />

</PreferenceScreen>
