<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableLayout
            android:id="@+id/TableLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            tools:context="com.tkprof.HundredEightV.MainActivity">

            <TableRow
                android:id="@+id/tableRow01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dip">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/count"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/remain"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/remain_e"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/btn_faster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/faster"
                    android:onClick="f_onClickFaster"
                    app:srcCompat="@drawable/outline_arrow_drop_up_24" />

                <ImageButton
                    android:id="@+id/btn_slower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/slower"
                    android:onClick="f_onClickSlower"
                    app:srcCompat="@drawable/outline_arrow_drop_down_24" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/count_a"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/count_a"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/count_b"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/count_b"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <CheckBox
                    android:id="@+id/cbx_tts_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cbx_tts_number"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/cbx_tts_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cbx_tts_text"
                    android:textColor="@color/black" />

                <ToggleButton
                    android:id="@+id/tgbBeginPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="f_onToggleClicked"
                    android:textOff="@string/start"
                    android:textOn="@string/pause" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:gravity="center"
            android:padding="1dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/my_text_color"
            android:textSize="32sp" />

    </LinearLayout>

</LinearLayout>
